# keyrecord

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.en.md  README.md  build.ps1  main.cpp  query.sql  start.vbs  todo.md
.github/workflows/: cmake-cross-platform.yml  cmake-single-platform.yml
archive/node-server/visualize/: PROJECT_SUMMARY.md  README.md  keyboard-layout.js  package-lock.json  package.json  server.js
cmake/: GenerateEmbeddedResources.cmake  PackageRelease.cmake
doc/: cross_platform_build_plan.md  frontend_redesign_iteration_plan.md  performance_architecture_assessment.md  todo.md
packaging/: keyrecord.service
resources/: config.example.ini
src/: api_queries.cpp  api_queries.h  app_config.cpp  app_config.h  config_path.cpp  config_path.h  embedded_resources.cpp  embedded_resources.h  http_router.cpp  http_router.h  key_classification.cpp  key_classification.h  key_event_writer.cpp  key_event_writer.h  key_names.cpp  key_names.h  keyboard_layout.cpp  keyboard_layout.h  keyrecord.rc.in  main.cpp  readonly_database.cpp  readonly_database.h  resource.h  server.cpp  server.h  server_bootstrap.cpp  server_bootstrap.h  server_main.cpp  server_response_adapter.cpp  server_response_adapter.h  server_startup.cpp  server_startup.h  sqlite_statement.cpp  sqlite_statement.h  tray_app.cpp  tray_app.h  visualization_service.cpp  visualization_service.h
src/platform/: capture_backend.h  capture_backend_linux.cpp  capture_backend_macos.mm  capture_backend_windows.cpp  key_code.h  linux_keymap.h  macos_keymap.h  platform_util.cpp  platform_util.h  tray.h  tray_macos.mm  tray_stub.cpp  tray_windows.cpp  virtual_keys.h
src/tests/: api_queries_tests.cpp  app_config_tests.cpp  config_path_tests.cpp  embedded_resources_tests.cpp  http_router_tests.cpp  key_classification_tests.cpp  keyboard_layout_tests.cpp  keyrecord_db_tests.cpp  linux_keymap_tests.cpp  macos_keymap_tests.cpp  readonly_database_tests.cpp  server_bootstrap_tests.cpp  server_response_adapter_tests.cpp  server_startup_tests.cpp  virtual_keys_tests.cpp  visualization_service_tests.cpp
visualize/: README.md
visualize/public/: index.html
visualize/public/css/: style.css
visualize/public/js/: analysis.js  api_cache.js  calendar.js  date_utils.js  keyboard.js  main.js
visualize/scripts/: verify-keyboard-module.js
